SandBox-2/force-app/main/default/objects/ShipTo_Information__c/fields/DDD_Outlet_ID__c.field-meta.xml
<CustomField>
    <fullName>DDD_Outlet_ID__c</fullName>
    <label>DDD Outlet ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>