SandBox-2/force-app/main/default/objects/ShipTo_Information__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <label>Ship To</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>