SandBox-2/force-app/main/default/objects/ShipTo_Information__c/fields/ShipTo_Type__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Type__c</fullName>
    <label>ShipTo Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>